<resources>
    <string name="app_name" translatable="false">Narcic NG</string>
    <string name="home_connect">Connect</string>
    <string name="home_connecting">Connecting…</string>
    <string name="home_connected">Connected</string>
    <string name="home_connected_title">Connected</string>
    <string name="home_choose_location">Choose a location</string>
    <string name="home_unknown_location">Unknown</string>
    <string name="home_no_server_selected">No server selected yet</string>
    <string name="home_ping_ms">%d ms</string>
    <string name="home_please_wait" translatable="false">Please wait…</string>
    <string name="home_tap_to_connect">Tap Connect to get started</string>
    <string name="home_tap_to_disconnect">Tap to disconnect</string>
    <string name="home_tap_to_retry">Tap to try again</string>
    <string name="home_testing_title">Finding the best server</string>
    <string name="home_testing_subtitle">Testing servers…</string>
    <string name="home_connecting_title">Connecting</string>
    <string name="home_connecting_subtitle">Waiting for VPN permission…</string>
    <string name="home_permission_denied">VPN permission wasn\'t granted</string>
    <string name="home_all_failed_title">No server found</string>
    <string name="home_all_failed">Couldn\'t connect. Please try again.</string>
    <string name="home_idle_title">Ready to connect</string>
    <string name="home_idle_subtitle">Tap Connect to get started</string>
    <string name="home_menu_retry">Retry</string>
    <string name="home_stat_ping">Ping ms</string>
    <string name="home_stat_upload">Upload Mb/s</string>
    <string name="home_stat_download">Download Mb/s</string>
    <string name="home_suggested_servers">Suggested Servers</string>
    <string name="home_view_all">View all</string>
    <string name="home_signal_excellent">Excellent</string>
    <string name="home_signal_good">Good</string>
    <string name="home_signal_fair">Fair</string>
    <string name="home_signal_poor">Poor</string>
    <string name="home_protocol_label">Protocol</string>
    <string name="home_connected_subtitle">Traffic encrypted • %s</string>
    <string name="server_list_title">Select location</string>
    <string name="server_list_empty">No results yet. Please wait while servers are tested…</string>
    <string name="home_telegram_prompt_message">Please join our Telegram channel for updates.</string>
    <string name="home_telegram_prompt_join">Join</string>
    <string name="home_telegram_prompt_later">Later</string>
    <string name="about_made_by">Made by the Narcic NG team</string>
    <string name="about_thanks">Thanks to  Rsta, Hamed, Ali🦦 , Amin , Parsa , Mr rango , haj metti , am , amir , mmd , berooz and  rest of the team.</string>
    <string name="about_tg_channel_label">Telegram channel</string>
    <string name="about_tg_channel_handle" translatable="false">@Narcic_Support</string>
    <string name="about_version_format">v%s</string>
    <string name="home_icon_idle" translatable="false">🔒</string>
    <string name="home_icon_testing" translatable="false">⏳</string>
    <string name="home_icon_connected" translatable="false">✅</string>
    <string name="home_icon_warning" translatable="false">⚠️</string>
    <string name="app_widget_name">Switch</string>
    <string name="app_tile_name">Switch</string>
    <string name="app_tile_first_use">First use of this feature, please use the app to add server</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="migration_success">Data migration success!</string>
    <string name="action_stop_service">Stop service</string>
    <string name="migration_fail">Data migration failed!</string>
    <string name="pull_down_to_refresh">Please pull down to refresh!</string>
    <string name="notification_action_stop_v2ray">Stop</string>
    <string name="toast_permission_denied">Unable to obtain the permission</string>
    <string name="toast_permission_denied_notification">Unable to obtain the notification permission</string>
    <string name="notification_action_more">Click for more</string>
    <string name="toast_services_start">Start Services</string>
    <string name="toast_services_stop">Stop Services</string>
    <string name="toast_services_success">Start Services Success</string>
    <string name="toast_services_failure">Start Services Failure</string>
    <string name="title_server">Config</string>
    <string name="menu_item_add_config">Add config</string>
    <string name="menu_item_save_config">Save config</string>
    <string name="menu_item_edit_config">Edit config</string>
    <string name="menu_item_del_config">Delete config</string>
    <string name="menu_item_import_config_qrcode">Import from QRcode</string>
    <string name="menu_item_import_config_clipboard">Import from Clipboard</string>
    <string name="menu_item_import_config_local">Import from locally</string>
    <string name="menu_item_import_config_policy_group">Add [Policy group]</string>
    <string name="menu_item_import_config_proxy_chain">Add [Proxy chain]</string>
    <string name="menu_item_import_config_manually_vmess">Add [VMess]</string>
    <string name="menu_item_import_config_manually_vless">Add [VLESS]</string>
    <string name="menu_item_import_config_manually_ss">Add [Shadowsocks]</string>
    <string name="menu_item_import_config_manually_socks">Add [SOCKS]</string>
    <string name="menu_item_import_config_manually_http">Add [HTTP]</string>
    <string name="menu_item_import_config_manually_trojan">Add [Trojan]</string>
    <string name="menu_item_import_config_manually_wireguard">Add [Wireguard]</string>
    <string name="menu_item_import_config_manually_hysteria2">Add [Hysteria2]</string>
    <string name="del_config_comfirm">Confirm delete ?</string>
    <string name="del_invalid_config_comfirm">Please test before deleting! Confirm delete ?</string>
    <string name="server_lab_remarks">remarks</string>
    <string name="server_lab_address">address</string>
    <string name="server_lab_port">port</string>
    <string name="server_lab_id">id</string>
    <string name="server_lab_alterid">alterId</string>
    <string name="server_lab_security">security</string>
    <string name="server_lab_network">Network</string>
    <string name="server_lab_more_function">Transport</string>
    <string name="server_lab_head_type">head type</string>
    <string name="server_lab_mode_type">gRPC mode</string>
    <string name="server_lab_request_host">host</string>
    <string name="server_lab_request_host_http">http host</string>
    <string name="server_lab_request_host_ws">ws host</string>
    <string name="server_lab_request_host_httpupgrade">httpupgrade host</string>
    <string name="server_lab_request_host_xhttp">xhttp host</string>
    <string name="server_lab_request_host_h2">h2 host</string>
    <string name="server_lab_request_host_quic">QUIC security</string>
    <string name="server_lab_request_host_grpc">gRPC Authority</string>
    <string name="server_lab_path">path</string>
    <string name="server_lab_path_ws">ws path</string>
    <string name="server_lab_path_httpupgrade">httpupgrade path</string>
    <string name="server_lab_path_xhttp">xhttp path</string>
    <string name="server_lab_path_h2">h2 path</string>
    <string name="server_lab_path_quic">QUIC key</string>
    <string name="server_lab_path_kcp">kcp seed</string>
    <string name="server_lab_path_grpc">gRPC serviceName</string>
    <string name="server_lab_stream_security">TLS</string>
    <string name="server_lab_stream_fingerprint">Fingerprint</string>
    <string name="server_lab_stream_alpn">Alpn</string>
    <string name="server_lab_allow_insecure">allowInsecure</string>
    <string name="server_lab_sni">SNI</string>
    <string name="server_lab_address3">address</string>
    <string name="server_lab_port3">port</string>
    <string name="server_lab_id3">password</string>
    <string name="server_lab_security3">security</string>
    <string name="server_lab_id4">Password(Optional)</string>
    <string name="server_lab_security4">User(Optional)</string>
    <string name="server_lab_encryption">encryption</string>
    <string name="server_lab_flow">flow</string>
    <string name="server_lab_public_key">PublicKey</string>
    <string name="server_lab_preshared_key">PreSharedKey(optional)</string>
    <string name="server_lab_short_id">ShortId</string>
    <string name="server_lab_spider_x">SpiderX</string>
    <string name="server_lab_mldsa65_verify">Mldsa65Verify</string>
    <string name="server_lab_secret_key">SecretKey</string>
    <string name="server_lab_reserved">Reserved(Optional, separated by commas)</string>
    <string name="server_lab_local_address">Local address (optional IPv4/IPv6, separated by commas)</string>
    <string name="server_lab_local_mtu">Mtu(optional, default 1420)</string>
    <string name="server_lab_kcp_mtu">mKCP MTU (Optional, core default 1350)</string>
    <string name="server_lab_kcp_tti">mKCP TTI (Optional, core default 50)</string>
    <string name="toast_success">Success</string>
    <string name="toast_failure">Failure</string>
    <string name="toast_none_data">There is nothing</string>
    <string name="toast_incorrect_protocol">Incorrect protocol</string>
    <string name="toast_decoding_failed">Decoding failed</string>
    <string name="title_file_chooser">Select a config</string>
    <string name="toast_require_file_manager">Please install a File Manager.</string>
    <string name="server_customize_config">Customize config</string>
    <string name="toast_config_file_invalid">Invalid config</string>
    <string name="server_lab_content">Content</string>
    <string name="toast_none_data_clipboard">There is no data in the clipboard</string>
    <string name="toast_invalid_url">Invalid URL</string>
    <string name="toast_insecure_url_protocol">Please do not use the insecure HTTP protocol subscription address</string>
    <string name="server_lab_need_inbound">Ensure inbounds port is consistent with the settings</string>
    <string name="toast_malformed_josn">Config malformed</string>
    <string name="server_lab_request_host6">Host(SNI)(Optional)</string>
    <string name="toast_action_not_allowed">Action not allowed</string>
    <string name="server_obfs_password">Obfs password</string>
    <string name="server_lab_port_hop">Port Hopping(will override the port)</string>
    <string name="server_lab_port_hop_interval">Port Hopping Interval</string>
    <string name="server_lab_bandwidth_down">Bandwidth down (Supported units: k/m/g/t)</string>
    <string name="server_lab_bandwidth_up">Bandwidth up (Supported units: k/m/g/t)</string>
    <string name="server_lab_xhttp_mode">XHTTP Mode</string>
    <string name="server_lab_xhttp_extra">XHTTP Extra raw JSON, format: { XHTTPObject }</string>
    <string name="server_lab_final_mask">finalMask raw JSON, format: { FinalMaskObject }</string>
    <string name="server_lab_cipher_suites">Cipher Suites</string>
    <string name="server_lab_cipher_suites_hint">TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:...</string>
    <string name="server_lab_ech_config_list">EchConfigList</string>
    <string name="server_lab_verify_peer_cert_by_name">Verify Peer Cert By Name</string>
    <string name="server_lab_pinned_ca256">Certificate fingerprint (SHA-256)</string>
    <string name="server_lab_browser_dialer">Enable Browser Dialer</string>
    <string name="per_app_proxy_settings">Per-app settings</string>
    <string name="title_settings">Settings</string>
    <string name="title_about">About</string>
    <string name="title_user_asset_setting">Asset files</string>
    <string name="tasker_start_service">Start Service</string>
</resources>